Fix Colemak/QWERTY para Corne

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,6 +1,19 @@
 # Uncomment the following lines to enable the Corne RGB Underglow
 CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_ZMK_RGB_UNDERGLOW_NFX=y
+CONFIG_ZMK_RGB_UNDERGLOW_ENABLE_KEY_EVENTS=y
+CONFIG_ZMK_RGB_UNDERGLOW_SLEEP=y
+CONFIG_ZMK_RGB_UNDERGLOW_PRIORITY=1
+CONFIG_ZMK_RGB_UNDERGLOW_NUM_PIXELS=12       # Cambia este número si tienes más
+CONFIG_ZMK_RGB_UNDERGLOW_DATA_PIN=6          # Pin GPIO de datos, probablemente P0.06
+CONFIG_ZMK_RGB_UNDERGLOW_DATA_PIN_INVERTED=n
+
+CONFIG_ZMK_RGB_BACKLIGHT=y
+CONFIG_ZMK_RGB_BACKLIGHT_NUM_PIXELS=42       # 21 teclas por lado, por ejemplo
+CONFIG_ZMK_RGB_BACKLIGHT_DATA_PIN=6
+
 CONFIG_WS2812_STRIP=y
+
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
 
@@ -11,3 +24,4 @@ CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_MAX_CONN=2
 CONFIG_BT_DEVICE_NAME="Corne"
 CONFIG_BT_MAX_PAIRED=1
+
