--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,60 @@
-name: Build ZMK firmware
-on: [push, pull_request, workflow_dispatch]
+name: Build ZMK firmware for Corne Wireless
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
 
 jobs:
   build:
-    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+        with:
+          submodules: recursive
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y cmake ninja-build gperf ccache dfu-util device-tree-compiler wget unzip python3-pip
+          pip3 install west
+
+      - name: Setup Zephyr and West
+        run: |
+          west init -l config
+          west update
+          west zephyr-export
+          pip3 install -r zmk/app/zephyr/scripts/requirements.txt
+
+      - name: Download Zephyr SDK
+        run: |
+          wget https://github.com/zephyrproject-rtos/sdk-ng/releases/download/v0.16.3/zephyr-sdk-0.16.3_linux-x86_64.tar.xz
+          tar xf zephyr-sdk-0.16.3_linux-x86_64.tar.xz
+          mv zephyr-sdk-0.16.3 $HOME/zephyr-sdk
+          echo "ZEPHYR_TOOLCHAIN_VARIANT=zephyr" >> $GITHUB_ENV
+          echo "ZEPHYR_SDK_INSTALL_DIR=$HOME/zephyr-sdk" >> $GITHUB_ENV
+
+      - name: Build firmware for Left Side
+        run: |
+          west build -s zmk/app -d build/left -b nice_nano_v2 \
+            -- -DZMK_CONFIG=./config -DSHIELD=corne_left
+
+      - name: Upload Left UF2
+        uses: actions/upload-artifact@v3
+        with:
+          name: corne-left
+          path: build/left/zephyr/zmk.uf2
+
+      - name: Build firmware for Right Side
+        run: |
+          west build -s zmk/app -d build/right -b nice_nano_v2 \
+            -- -DZMK_CONFIG=./config -DSHIELD=corne_right
+
+      - name: Upload Right UF2
+        uses: actions/upload-artifact@v3
+        with:
+          name: corne-right
+          path: build/right/zephyr/zmk.uf2
