--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 name: Build ZMK firmware for Corne Wireless
+
 on:
   push:
     branches:
@@ -14,6 +15,13 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: recursive
+
+      - name: Pre-warm upload-artifact action
+        uses: actions/upload-artifact@v3
+        with:
+          name: dummy
+          path: README.md
+        continue-on-error: true
 
       - name: Install dependencies
         run: |
